--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bootstrap-ajax-content",
-  "version": "0.0.0",
+  "version": "v1.0.0",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-header": "^1.8.8",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0"
   }
